--- a/ElReg/elreg_app/static/css/ie-only.css
+++ b/ElReg/elreg_app/static/css/ie-only.css
@@ -1,392 +1,6 @@
-/*---------------------------------------------------------Тело-------------------------------------------------------*/
-
-/*общие настройки для всех шаблонов*/
-
-body, td, th, div, p, label, input {
-	color:#45494a;
-	font:normal 14px/17px Verdana, Arial, Helvetica, sans-serif;
-    text-align: justify;
-}
-
-body {
-    background: url(../images/background_ie.jpg) fixed repeat-x left top;
-    overflow: scroll;
-}
-
-.main 	{
-    width:973px;
-    height: 650px;
-    position:relative;
-    margin:0 auto;
-    padding:0;
-}
-
-.header {
-    position:relative;
-    width:971px;
-    margin:0 auto;
-    height:134px;
-}
-
-a {
-    color:#727272;
-    text-decoration:underline;
-    font-size:10px;
-    text-transform:uppercase
-}
-
-input {
-    border-radius: 5px; /* закругление углов для всех, кто понимает */
-    margin: 5px 0 5px 0;
-}
-
-fieldset {
-    border-radius: 20px; /* закругление углов для всех, кто понимает */
-}
-
-/*---------------------------------------------------------Меню-------------------------------------------------------*/
-
-ul.menu-nav {
-    padding:0 0 0 0;
-    margin:0 0 0 0;
-    position:absolute;
-    z-index:1;
-    top:91px;
-    left:0;
-    background:url(../images/top_menu.gif) no-repeat 0 0;
-    border-radius: 20px; /* закругление углов для всех, кто понимает */
-    box-shadow: 0 7px 10px rgba(0, 0, 0, 0.2);
-    width:100%;
-    height:43px
-}
-
-ul.menu-nav li	{
-	display:inline;
-	float:left;
-	margin:0 -197px 0 0;
-	padding:0 200px 0 0;
-	position:relative;
-}
-
-ul.menu-nav li a  {
-	border:none;
-	text-decoration:none;
-	float:left;
-	margin:0 0 0 0;
-	padding:12px 27px 12px 27px;
-	display:inline;
-    font-size:14px;
-    font-weight:bold;
-	background:url(../images/separator.gif) no-repeat 100% 0;
-	text-align:center;
-    text-transform:uppercase;
-}
-
-ul.menu-nav li:last-child a {
-    background:none;
-}
-
-ul.menu-nav li a.current  {
-    color: #32a7d6;
-}
-
-ul.menu-nav li a:hover {
-	color: #32a7d6;
-}
-
-/*---------------------------------------------------------Филдсеты---------------------------------------------------*/
-
-/*на странице ЛПУ выравнивание формы*/
-
-fieldset div.searchField {
-    text-align: center;
-}
-
-/*на странице Пациент с формой*/
-
-#info fieldset {
-    border-radius: 20px; /* закругление углов для всех, кто понимает */
-}
-
-/*на странице Время легенда таблицы с расписанием*/
-
-.legend {
-    float:right;
-}
-
-.legend li {
-    display:inline;
-    color: #696969;
-    font-weight: bold;
-    float:left;
-    margin:-7px 20px 0 20px;
-    padding:10px;
-    border: 1px solid #696969;
-}
-
-.legend li.free {
-    background-color: #baffad;
-}
-
-.legend li.locked {
-    background-color: #ffc8c1;
-}
-
-.legend li.not {
-    background-color: rgb(255, 255, 255);
-}
-
-/*---------------------------------------------------------Таблицы----------------------------------------------------*/
-
-/*общее для всех таблиц*/
-
-.tabb table {
-    background: rgb(255, 255, 255);
-    border: 1px solid #bcbcbc;
-    padding: 5px;
-    width: 100%; /* Ширина таблицы */
-    border-radius: 20px; /* закругление углов для всех, кто понимает */
-    box-shadow: 0 5px 7px #aeaeae;
-}
-
-.tabb table th {
-    text-align: center;
-    vertical-align: middle;
-}
-
-.tabb table td {
-    height: 40px;
-    text-align: center;
-    vertical-align: middle;
-}
-
-.tabb table td a {
-    padding: 10px;
-    font-size:13px;
-    text-decoration:none;
-}
-
-.tabb table td.locked, .tabb table td.locked:hover  {
-    background: #ffc8c1;
- }
-
-.tabb table td.free {
-    background: #baffad;
-}
-
-.tabb table td.free  button {
-    background: #baffad;
-    display: block;
-    font-size:14px;
-    font-weight:bold;
-    color: #9d9d9d;
-}
-
-.tabb table td.free  button:hover {
-    box-shadow: inset 0 0 30px 4px #b2caff;
-}
-
-.tabb table td:hover {
-    color: #000;
-    opacity: 1; /* Полупрозрачность таблицы */
-    filter: alpha(Opacity=100); /* Для IE */
-    border-radius: 10px; /* закругление углов для всех, кто понимает */
-    box-shadow: inset 0 0 30px 4px #b2caff;
-}
-
-/*таблица поиска*/
-
-table.no_search {
-    border: none;
-    box-shadow: none;
-    background-color: rgba(0, 0, 0, 0);
-}
-
-table.search {}
-
-/*общая таблица на странице трёх вкладок*/
-
-table.commonTable {
-    background: rgb(255, 255, 255);
-    border: 1px solid #bcbcbc;
-    padding: 5px;
-    width: 100%; /* Ширина таблицы */
-    border-radius: 20px; /* закругление углов для всех, кто понимает */
-}
-
-table.commonTable tr td {
-    vertical-align: top;
-}
-
-table.commonTable tr td:hover {
-    background: rgb(255, 255, 255);
-    border-radius: 20px; /* закругление углов для всех, кто понимает */
-    box-shadow: none;
-}
-
-/*три таблицы на странице трёх вкладок*/
-
-table.firstTable, table.secondTable, table.thirdTable {
-    background: rgb(255, 255, 255);
-    border: none;
-    padding: 5px;
-    width: 315px; /* Ширина таблицы */
-    border-radius: 20px; /* закругление углов для всех, кто понимает */
-    box-shadow: none;
-}
-
-table.firstTable:hover, table.secondTable:hover, table.thirdTable:hover {
-    box-shadow: 0 7px 10px rgba(0, 0, 0, 0.2);
-}
-
-table.firstTable tr td, table.secondTable tr td, table.thirdTable tr td {
-    padding: 5px;
-    vertical-align: middle;
-    cursor: pointer;
-}
-
-table.firstTable tr td:hover, table.secondTable tr td:hover, table.thirdTable tr td:hover {
-    border: none;
-    border-radius: 20px; /* закругление углов для всех, кто понимает */
-    box-shadow: inset 0 0 30px 4px rgba(56, 140, 227, 0.28);
-}
-
-/*стиль для выделенных ссылок на странице Подразделение*/
-
-.specActive, .profActive {
-    color: #00d9ff;
-}
-
-/*таблица с кнопками "Отправить" и "Назад" на странице Пациент*/
-
-table.footer_btn {
-    border: none;
-    box-shadow: none;
-}
-
-.footer_btn tr td {
-    text-align: left;
-}
-
-.footer_btn tr td:last-child {
-    text-align: right;
-}
-
-.footer_btn tr td a {
-    padding: 0;
-}
-
-.footer_btn tr td:hover {
-    box-shadow: none;
-}
-
-/*таблица на странице Запись*/
-
-.register table {
-    background: rgb(255, 255, 255);
-    border: 1px solid #bcbcbc;
-    padding: 10px;
-    width: 100%; /* Ширина таблицы */
-    border-radius: 20px; /* закругление углов для всех, кто понимает */
-    box-shadow: 0 5px 7px rgba(0, 0, 0, 0.2);
-}
-
-.register table tr th {
-    height: 40px;
-    font-weight:bold;
-    text-align: center;
-}
-
-.register table tr td {
-    vertical-align: top;
-    padding: 5px;
-    text-align: justify;
-}
-
-.register table tr td:first-child {
-    width: 25%;
-}
-
-.register table td:hover {
-    color: #000;
-}
-
-/*---------------------------------------------------------Формы------------------------------------------------------*/
-
-/*форма на странице Пациент*/
-
-.field label {
-    float: left;
-    width: 200px;
-    margin: 5px 10px 5px 0;
-    text-align: right;
-    clear: left;
-}
-
-/*---------------------------------------------------------Кнопки-----------------------------------------------------*/
-
-/*все кнопки-картинки*/
-
-.container {
-    width:102px;
-    height:40px;
-    border: none;
-    padding: 0;
-    margin: 0;
-    display:inline-block;
-    overflow:hidden;
-}
-
-.container img {
-    border: none;
-}
-
-.container:hover {
-    text-indent:-102px;
-}
-
-/*кнопки-ячейки таблицы на странице Время*/
-
-.cell_btn {
-    border: none;
-    width: 100%;
-    padding: 10px;
-}
-
-/*кнопка "Отправить" на странице Пациент*/
-
-.sendsubmit {
-    border: 0;
-    background: transparent url(../images/submit_btn.gif) no-repeat left center;
-    text-indent: -1000em;
-}
-
-.sendsubmityes {
-    border: 0;
-    background: transparent url(../images/submit_btn.gif) no-repeat right center;
-    text-indent: -1000em;
-    cursor: pointer;
-    cursor: hand;
-}
-
-.btnPrint {
-    border: 0;
-    width:102px;
-    height:40px;
-    margin:0 382px 0 0;
-    background: transparent url(../images/btn_print.gif) no-repeat left center;
-    text-indent: -1000em;
-    cursor: pointer;
-    cursor: hand;
-}
-
-.btnReady {
-    border: 0;
-    width:102px;
-    height:40px;
-    margin:0 0 0 382px;
-    background: transparent url(../images/btn_ready.gif) no-repeat left center;
-    text-indent: -1000em;
-    cursor: pointer;
-    cursor: hand;
+.container,
+.navbar-static-top .container,
+.navbar-fixed-top .container,
+.navbar-fixed-bottom .container {
+    width:expression(document.body.clientWidth > 1100? "1170px": "auto" );
 }
