--- a/ElReg/elreg_app/templates/base.html
+++ b/ElReg/elreg_app/templates/base.html
@@ -31,6 +31,9 @@
         <!--[if IE 6]>
             <link href="{{ STATIC_URL }}/static/css/ie6.min.css" rel="stylesheet">
         <![endif]-->
+        <!--[if IE]>
+           <script type="text/javascript" src="{{ STATIC_URL }}/static/js/respond.min.js"></script>
+        <![endif]-->
         <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}/static/css/style.css" />
 	</head>
 	<body>
