--- a/ElReg/elreg_app/templates/base.html
+++ b/ElReg/elreg_app/templates/base.html
@@ -8,11 +8,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>
-            {% block title %}
-                Электронная регистратура
-            {% endblock %}
-        </title>
+        <title>{% block title %}Электронная регистратура{% endblock %}</title>
 
 		<script type="text/javascript" src="{{ STATIC_URL }}/static/js/jquery-1.8.2.min.js"></script>
 {#		<script type="text/javascript" src="{{ STATIC_URL }}/static/js/jquery-ui-1.9.1.custom.min.js"></script>#}
@@ -21,11 +17,6 @@
         <script type="text/javascript" src="{{ STATIC_URL }}/static/bootstrap/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="{{ STATIC_URL }}/static/js/ie6.min.js"></script>
         <script type="text/javascript">jQuery('input[placeholder]').placeholder();</script>
-        <style type="text/css" media="print">
-            div.no_print {display: none;}
-            table.no_shadow_print {box-shadow: none;}
-            table.no_shadow_print tr td {font-size: 18px;}
-        </style>
         <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}/static/css/jquery-ui/blitzer/jquery-ui-1.9.1.custom.min.css" />
         <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}/static/bootstrap/css/bootstrap.min.css" />
         <!--[if IE 6]>
@@ -34,7 +25,8 @@
         <!--[if IE]>
            <script type="text/javascript" src="{{ STATIC_URL }}/static/js/respond.min.js"></script>
         <![endif]-->
-        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}/static/css/style.css" />
+        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}/static/css/style.css" media="screen" />
+        <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}/static/css/print.css" media="print" />
 	</head>
 	<body>
     <div class="container">
