Добавлена CAPTCHA на форму записи

--- a/ElReg/elreg_app/static/css/style.css
+++ b/ElReg/elreg_app/static/css/style.css
@@ -36,3 +36,9 @@ ul.upper_case li{
 .navbar{
     min-width:1170px;
 }
+.captcha{
+    border: 1px solid #CCC;
+}
+input#captcha_1{
+    width: 56px;
+}
