--- a/ElReg/elreg_app/templates/patient.html
+++ b/ElReg/elreg_app/templates/patient.html
@@ -93,11 +93,18 @@
         <div class="controls">
             <input id="chb" value="0" type="checkbox" /> - отправить информацию о записи на электронный адрес
         </div>
-        </div>
+    </div>
     <div class="control-group">
         <label class="control-label" for="email">Адрес электронной почты</label>
         <div class="controls">
             <input type="text" class="span4" name="email" id="email" value="{{ userEmail }}" maxlength="50" size="35" disabled="disabled" autocomplete="on" placeholder="example@email.ru" />
+        </div>
+    </div>
+
+    <div class="control-group">
+        <label class="control-label" for="captcha_1">Укажите результат выражения<span class="text-error">*</span></label>
+        <div class="controls">
+            {{ captcha }}
         </div>
     </div>
 
