Доработка модуля настроек, добавление настроек для шапки, интеграционного сервиса

--- a/ElReg/elreg_app/static/css/style.css
+++ b/ElReg/elreg_app/static/css/style.css
@@ -42,3 +42,10 @@ ul.upper_case li{
 input#captcha_1{
     width: 56px;
 }
+.mo_list a {
+    text-;
+}
+.no-vmargin{
+    margin-top:0;
+    margin-bottom: 0;
+}
