--- a/ElReg/elreg_app/templates/index.html
+++ b/ElReg/elreg_app/templates/index.html
@@ -24,7 +24,7 @@
         {% endif %}
         {% endfor %}
     </div>
-<p>
-    <a href="{% url medical_institution %}search/" class="btn btn-primary btn-large" title="Поиск ЛПУ">Поиск ЛПУ</a>
-</p>
+    <p class="pull-right">
+        <a href="{% url medical_institution %}search/" class="btn btn-primary btn-large" title="Поиск ЛПУ">Поиск ЛПУ</a>
+    </p>
 {% endblock %}
