--- a/ElReg/elreg_app/templates/base.html
+++ b/ElReg/elreg_app/templates/base.html
@@ -32,8 +32,8 @@
     <div class="container">
     <header class="no_print">
         <div class="row-fluid page-header no_print">
-            <div class="span1"><a href="/" title="На главную"><img src="{{ STATIC_URL }}/static/images/logo.png"></a></div>
-            <div class="span11"><h1>Электронная регистрация</h1></div>
+            <div class="span1"><a href="/" title="На главную"><img src="{{ MEDIA_URL }}/{{ logo }}"></a></div>
+            <div class="span11 lead no-vmargin"><h2 class="no-vmargin">{{ site_name }}</h2>{{ region_name }}</div>
         </div>
         <div class="navbar top_path no_print">
             <div class="navbar-inner">
