--- a/ElReg/elreg_app/static/css/style.css
+++ b/ElReg/elreg_app/static/css/style.css
@@ -42,10 +42,8 @@ ul.upper_case li{
 input#captcha_1{
     width: 56px;
 }
-.mo_list a {
-    text-;
-}
 .no-vmargin{
     margin-top:0;
     margin-bottom: 0;
 }
+.nav-stacked {white-space: nowrap;}
