--- a/ElReg/elreg_app/templates/patient.html
+++ b/ElReg/elreg_app/templates/patient.html
@@ -84,7 +84,7 @@
     <div class="control-group">
         <label class="control-label" for="policy1">Серия и номер полиса<span class="text-error">*</span></label>
         <div class="controls">
-            <input type="text" name="policy1" id="policy1" value="{{ policy1 }}" maxlength="10" size="2" autocomplete="on" placeholder="12" class="span1" />
+            <input type="text" name="policy1" id="policy1" value="{{ policy1 }}" maxlength="10" size="2" autocomplete="on" placeholder="" class="span1" />
             <input type="text" class="span3" name="policy2" id="policy2" value="{{ policy2 }}" maxlength="16" size="20" autocomplete="on" placeholder="1234567890123456" />
         </div>
     </div>
