Исправлено расписание, теперь не отображается время на неактивных ячейках

--- a/ElReg/elreg_app/templates/time.html
+++ b/ElReg/elreg_app/templates/time.html
@@ -60,9 +60,7 @@
                                     {{ cell.start.time|time:"H:i" }}
                                 </button>
                             {% else %}
-                                <button type="button" class="btn btn-block disabled" name=ticket value="{{ cell.start.date|date:"d:m:Y" }}-{{ cell.start.time }}-{{ cell.finish.time }}">
-                                    {{ cell.start.time|time:"H:i" }}
-                                </button>
+                                <button type="button" class="btn btn-block disabled" name=ticket value="{{ cell.start.date|date:"d:m:Y" }}-{{ cell.start.time }}-{{ cell.finish.time }}">&nbsp;</button>
                             {% endif %}
                     {% else %}
                         <td align="center">
