--- a/ElReg/elreg_app/templates/register.html
+++ b/ElReg/elreg_app/templates/register.html
@@ -11,7 +11,7 @@
     <tr><th>Дата рождения:</th><td colspan="2">{{ birthday }} г.</td></tr>
     {% if client_id %}
     <tr><th>№ Амбулаторной карты:</th><td colspan="2">{{ client_id }}</td></tr>
-    {% endif %}
+    {% else %}
     {% if policy_type == '2' or policy_type == '4' %}
     <tr><th>Полис ОМС:</th><td colspan="2">{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
     {% endif %}
@@ -22,7 +22,8 @@
     <tr><th>Военный билет:</th><td colspan="2">{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
     {% endif %}
     {% if document_code == '4' %}
-    <tr><th>Удостоверение личности офицера:</th><td colspan="2">>{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
+    <tr><th>Удостоверение личности офицера:</th><td colspan="2">{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
+    {% endif %}
     {% endif %}
     <tr><th colspan="3"><h4>ВЫ ЗАПИСАНЫ НА ПРИЕМ:</h4></th></tr>
     <tr><th>Лечебное учреждение:</th><td colspan="2">{{ current_lpu_title }},<br/>{{ address }},<br/>телефон: {{ current_lpu_phone }}</td></tr>
