--- a/ElReg/elreg_app/templates/base.html
+++ b/ElReg/elreg_app/templates/base.html
@@ -32,7 +32,7 @@
     <div class="container">
     <header class="no_print">
         <div class="row-fluid page-header no_print">
-            <div class="span1"><a href="/" title="На главную"><img src="{{ MEDIA_URL }}{{ logo }}"></a></div>
+            <div class="span1"><a href="{{ home_link|default:'/' }}" title="На главную"><img src="{{ MEDIA_URL }}{{ logo }}"></a></div>
             <div class="span11 lead no-vmargin"><h2 class="no-vmargin">{{ site_name }}</h2>{{ region_name }}</div>
         </div>
         <div class="navbar top_path no_print">
