--- a/ElReg/elreg_app/templates/subdivision.html
+++ b/ElReg/elreg_app/templates/subdivision.html
@@ -5,7 +5,7 @@
     <dl class="dl-horizontal">
         <dt>Лечебное учреждение:</dt><dd>{{ current_lpu.name }}</dd>
         <dt>Телефон:</dt><dd>{{ current_lpu.phone }}</dd>
-        <dt>Электронная почта:</dt><dd><a href="mailto:{{ current_lpu.email }}">{{ current_lpu.email }}</a></dd>
+        {% if current_lpu.email %}<dt>Электронная почта:</dt><dd><a href="mailto:{{ current_lpu.email }}">{{ current_lpu.email }}</a></dd>{% endif %}
     </dl>
 </blockquote>
 <div class="well">
