Надпись про службу тех. поддержки, В случае ошибки

--- a/ElReg/elreg_app/templates/patient.html
+++ b/ElReg/elreg_app/templates/patient.html
@@ -32,6 +32,8 @@
 {#    <button type="button" class="close" data-dismiss="alert">&times;</button>#}
     <strong>Ошибка записи!</strong>
     {{ ticketPatient_err }}
+    <br>
+    Обратитесь в службу технической поддержки
     </div>
     <script type="text/javascript">
         $(".alert").alert();
