--- a/ElReg/elreg_app/templates/email/email.html
+++ b/ElReg/elreg_app/templates/email/email.html
@@ -13,7 +13,22 @@
             <tr><th colspan="3">УВЕДОМЛЕНИЕ О ЗАПИСИ НА ПРИЕМ №{{ ticketUid }}</th></tr>
             <tr><td>ФИО (Пациент):</td><td colspan="2">{{ patientName }}</td></tr>
             <tr><td>Дата рождения:</td><td colspan="2">{{ birthday }} г.</td></tr>
-            <tr><td>Полис ОМС:</td><td colspan="2">{{ omiPolicyNumber }}</td></tr>
+            {% if client_id %}
+            <tr><td>№ Амбулаторной карты:</td><td colspan="2">{{ client_id }}</td></tr>
+            {% else %}
+            {% if policy_type == '2' or policy_type == '4' %}
+            <tr><td>Полис ОМС:</td><td colspan="2">{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
+            {% endif %}
+            {% if policy_type == '3' %}
+            <tr><td>Полис ДМС:</td><td colspan="2">{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
+            {% endif %}
+            {% if document_code == '7' %}
+            <tr><td>Военный билет:</td><td colspan="2">{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
+            {% endif %}
+            {% if document_code == '4' %}
+            <tr><td>Удостоверение личности офицера:</td><td colspan="2">{% if series %}{{ series }} {% endif %}{{ number }}</td></tr>
+            {% endif %}
+            {% endif %}
             <tr><th colspan="3">ВЫ ЗАПИСАНЫ НА ПРИЕМ:</th></tr>
             <tr><td>Лечебное учреждение:</td><td colspan="2">{{ current_lpu_title }}, {{ address }}, телефон: {{ current_lpu_phone }}</td></tr>
             <tr><td>Врач:</td><td colspan="2">{{ doctor }} ({{ speciality }})</td></tr>
