Добавлен новый тип ячеек по прошедшему времени приёма

--- a/ElReg/elreg_app/templates/time.html
+++ b/ElReg/elreg_app/templates/time.html
@@ -30,9 +30,9 @@
             <div class="row-fluid">
                 <div class="span3"><p class="lead"><big>Расписание врача:</big></p></div>
                 <div class="span3 offset6">
-                    <button type="submit" class="btn btn-mini btn-success">Свободно</button>
-                    <button type="submit" class="btn btn-mini btn-danger disabled">Занято</button>
-                    <button type="submit" class="btn btn-mini btn-inverse disabled">Приём окончен</button>
+                    <button type="button" class="btn btn-mini btn-success">Свободно</button>
+                    <button type="button" class="btn btn-mini btn-danger disabled">Занято</button>
+                    <button type="button" class="btn btn-mini btn-inverse disabled">Приём окончен</button>
                 </div>
             </div>
         </caption>
