Links to mainpage in error pages

--- a/ElReg/elreg_app/templates/500.html
+++ b/ElReg/elreg_app/templates/500.html
@@ -7,11 +7,9 @@
 </head>
 
 <body>
-<h1>Страница недоступна</h1>
-
+<legend><h3>Страница недоступна</h3></legend>
 <p>Извините, запрошенная страница недоступна из-за неполадок на сервере.</p>
-
 <p>Инженеры извещены, зайдите, пожалуйста, попозже.</p>
+<h4><a href="{% url index %}" title="На главную страницу">Вернуться на главную страницу</a></h4>
 </body>
-
 </html>
