--- a/ElReg/elreg_app/templates/404.html
+++ b/ElReg/elreg_app/templates/404.html
@@ -5,7 +5,7 @@
 {% block title %}Страница не найдена{% endblock %}
 
 {% block content %}
-    <h1>Страница не найдена</h1>
-
+    <legend><h3>Страница не найдена</h3></legend>
     <p>Извините, запрошенная вами страница не найдена.</p>
+    <h4><a href="{% url index %}" title="На главную страницу">Вернуться на главную страницу</a></h4>
 {% endblock %}
